# karmabotcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-debug.sh  conanfile.txt  currenciesbroadcaster.cpp  currenciesbroadcaster.h  karmabot.cpp  karmabot.h  karmaloader.cpp  karmaloader.h  main.cpp  misc.cpp  misc.h
